objects/Component_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Component Attributes</relationshipLabel>
        <relationshipName>Component_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component Attribute</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Component Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>